# tedata

./: .gitignore  .gitignore.txt  README.md  generate_docs.py  pyproject.toml  scrape.py  scrape_testz.ipynb
docs/: index.html  search.js  tedata.html
docs/tedata/: base.html  index.html  logger_setup.html  scrape_chart.html  scraper.html  search.html  utils.html
src/: __init__.py  __main__.py  __main__bu.py  scraper.py
src/tedata/: __init__.py  __main__.py  base.py  firstLastDates.js  init_tooltips.js  js_parts.js  last_soup.html  latest_points.js  logger_setup.py  scrape_chart.py  scraper.py  search.py  utils.py
tests/: aus_urls.csv  auto_tests.py  dev_tests.ipynb  jobless_claims.html  new_tests.ipynb  page.html  path.html  prod_tests.ipynb  scaling.ipynb  series2csv.js  tedata_walkthrough.ipynb  test_results.csv  test_results.md  test_scaling.py  unittests.py
